<resources>
    <!-- App Data -->
    <string name="app_name">Miniproject</string>

    <string name="settings">settings</string>

    <!-- Server Adress for communication gadgetothek -->
    <string name="serverAddress">serverAddress</string>

    <!-- Begin string definition login screen -->
    <string name="loginAppIconImageContentDescription">gadgetothek</string>
    <string name="loginEmailLabelText">email</string>
    <string name="loginEmailHintText">email address</string>
    <string name="loginPasswordLabelText">password</string>
    <string name="loginPasswordHintText">password</string>
    <string name="loginKeepSwitchText">keep me logged in</string>
    <string name="loginLoginButtonText">login</string>
    <string name="loginRegistrationViewText">New to Gadgetothek? Register now!</string>
    <string name="loginRegistrationButtonText">registration</string>

    <!-- Begin string definition registration screen -->
    <string name="registrationAppIconImageContentDescription">gadgetothek registration</string>
    <string name="registrationEmailLabelText">email</string>
    <string name="registrationEmailHintText">email address</string>
    <string name="registrationNameLabelText">name</string>
    <string name="registrationNameHintText">your name</string>
    <string name="registrationMatrikelLabelText">matrikel no.</string>
    <string name="registrationMatrikelHintText">matrikel number</string>
    <string name="registrationPasswordLabelText">password</string>
    <string name="registrationPasswordHintText">password</string>
    <string name="registrationRegisterButtonText">register</string>

    <!-- Begin other -->
    <string name="reservation_input">Reservationsartikel wählen</string>
    <string name="reservation_button">Reservieren</string>
    <string name="reservation_list_button">Reservationen anzeigen</string>
    <string name="email_label">Email</string>
    <string name="name_label">Name</string>
    <string name="matrikel_label">Matrikel-Nr.</string>
    <string name="password_label">Passwort</string>
    <string name="register_button">Registrieren</string>

    <string-array name="reservation_array">
        <item>Hans</item>
        <item>Heidi</item>
        <item>Klara</item>
    </string-array>
</resources>